scripts/slurm-21608252.out
  File "<string>", line 1
    import numby:numby.test()
                ^
SyntaxError: invalid syntax
